--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,12 @@
 
 @media screen and (min-width: 769px) {
     .container {
+        width: 70%;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .container {
         width: 40%;
     }
 }
